--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -5,11 +5,21 @@
     android:orientation="vertical"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
+    <android.support.design.widget.FloatingActionButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:clickable="true"
+        map:fabSize="mini"
+        map:srcCompat="@android:drawable/ic_menu_camera"
+        android:id="@+id/floatingActionButton"
+        map:elevation="20dp"
+        android:onClick="setCamera" />
+
     <fragment
         android:id="@+id/map"
     android:name="com.google.android.gms.maps.SupportMapFragment"
-    android:layout_width="408dp"
-    android:layout_height="513dp"
+    android:layout_width="413dp"
+    android:layout_height="506dp"
     tools:context="com.example.mikey.maps.MapsActivity" />
 
     <LinearLayout
@@ -18,7 +28,7 @@
 
 
         <EditText
-        android:layout_width="154dp"
+        android:layout_width="158dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:hint="Search for trail"
