--- a/app/src/main/res/layout/activity_trail_history.xml
+++ b/app/src/main/res/layout/activity_trail_history.xml
@@ -1,13 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/activity_trail_history"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:paddingLeft="@dimen/activity_horizontal_margin"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.example.mikey.maps.TrailHistoryActivity">
+    tools:context="com.example.mikey.maps.Trails.trailsActivity"
+    android:clickable="true"
+    android:orientation="vertical"
+    app:layout_scrollFlags="scroll">
+
+    <Spinner
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
+        android:paddingTop="10dp"
+        android:gravity="center"
+        android:id="@+id/spinner"
+        android:background="#939493"
+        android:popupBackground="#939493"
+        android:entries="@array/array_name">
+    </Spinner>
+
+    <ListView
+        android:id="@+id/list"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
+        android:layout_below="@+id/search" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/search"
+        android:layout_alignParentTop="true"
+        android:layout_toEndOf="@+id/spinner" />
+
+
+
 
 </RelativeLayout>
