--- a/app/src/main/res/layout/activity_trails.xml
+++ b/app/src/main/res/layout/activity_trails.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.example.mikey.maps.trailsActivity"
+    tools:context="com.example.mikey.maps.Trails.trailsActivity"
     android:clickable="true"
     android:orientation="vertical"
     app:layout_scrollFlags="scroll">
@@ -31,7 +31,6 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:inputType="textPersonName"
-            android:text="Search"
             android:ems="10"
             android:id="@+id/search"
             android:layout_alignParentTop="true"
