--- a/app/src/main/res/layout/activity_maps.xml
+++ b/app/src/main/res/layout/activity_maps.xml
@@ -11,12 +11,13 @@
         android:name="com.google.android.gms.maps.SupportMapFragment"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context="com.example.mikey.maps.MapsActivity" >
+        tools:context="com.example.mikey.maps.MapsActivity"
+        tools:layout="@layout/activity_maps">
 
         <android.support.design.widget.FloatingActionButton
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:layout_gravity="right|top"
+            android:layout_gravity="right|bottom"
             android:clickable="true"
             android:focusable="false"
             map:fabSize="mini"
